--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -1119,3 +1119,21 @@ abstract = { Abstract In this article we describe and investigate tiled shading.
  address = {New York, NY, USA},
  keywords = {graphics hardware, real-time rendering, shader programming, shadow maps},
 }
+
+@inproceedings{Olsson:2015:manylightmanagement,
+ author = {Olsson, Ola and Persson, Emil and Billeter, Markus},
+ title = {Real-time Many-light Management and Shadows with Clustered Shading},
+ booktitle = {ACM SIGGRAPH 2015 Courses},
+ series = {SIGGRAPH '15},
+ year = {2015},
+ isbn = {978-1-4503-3634-5},
+ location = {Los Angeles, California},
+ pages = {12:1--12:398},
+ articleno = {12},
+ numpages = {398},
+ url = {http://doi.acm.org/10.1145/2776880.2792712},
+ doi = {10.1145/2776880.2792712},
+ acmid = {2792712},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
