--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -129,6 +129,13 @@
 \todo{brighter version for print}
 \todo{cleanup references}
 
+\todo[]{remove all we}
+
+\todo[color=yellow]{rename gi shader to final gathering. other renames?}
+\todo{what openGL version do i require? also, i should look up which dedicated GPUs support 4.5/4.4 and what Intels GPUs say. maybe point out the need for modern OpenGL more? also, how they make it easier to implement.}
+
+\todo[color=yellow]{investigate into interleaving via shared memory in 2x2 groups (that is, one work group reads 2x2 interleaved pixels instead of one)}
+
 % \include{chap-examples}
 % \include{chap-moreexamples}
 
