--- a/chap-results.tex
+++ b/chap-results.tex
@@ -55,7 +55,7 @@ The VPL sampling itself takes only several microseconds and is negligible. Bear 
   \begin{tabular}{@{}c@{}}
     \includegraphics[width=1.0\textwidth]{screenshots/RSM_unfavorable} \\
   \end{tabular}
-  \caption{Inefficiently placed VPLs. Since there is no further geometry in the hemisphere they illuminate, they do not contribute to the final image.}
+  \caption{A visualization of inefficiently placed VPLs. Since there is no further geometry above them that could be illuminated, they do not contribute to the final image.}
   \label{fig:results:RSMUnfavorable}
 \end{figure}
 
