--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -1137,3 +1137,19 @@ abstract = { Abstract In this article we describe and investigate tiled shading.
  publisher = {ACM},
  address = {New York, NY, USA},
 }
+
+
+@article {Faure:2010:Metalights,
+author = {Faure, William and Chang, Chun-Fa},
+title = {Metalights: Improved Interleaved Shading},
+journal = {Computer Graphics Forum},
+volume = {29},
+number = {7},
+publisher = {Blackwell Publishing Ltd},
+issn = {1467-8659},
+url = {http://dx.doi.org/10.1111/j.1467-8659.2010.01798.x},
+doi = {10.1111/j.1467-8659.2010.01798.x},
+pages = {2109--2117},
+keywords = {I.3.7 [Computer Graphics]: Three-Dimensional Graphics and Realism—Raytracing},
+year = {2010},
+}
